--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -1,7 +1,9 @@
 extends base
 
 block content 
-  h4 Change Title of Video
+  h4 Update Video
   form(method="POST")
-    input(name="title", placeholder="Video Title", value=video.title required)
+    input(placeholder="Title",required, type="text", name="title", maxLength=80, value=video.title )
+    input(placeholder="Description", required, type="text", name="description", minLength=20, value=video.description)
+    input(placeholder="Hashtags, separated by comma.", required, type="text", name="hashtags", value=video.hashtags.join(", "))
     input(value="Save", type="submit")
