--- a/src/views/join.pug
+++ b/src/views/join.pug
@@ -11,3 +11,7 @@ block content
     input(placeholder="Confirm Password" name="password2", type="password", required)
     input(placeholder="Location" name="locateion", type="text, required")
     input(type="submit", value="Join")
+  hr
+  div 
+    span Alreday Have an Account? 
+    a(href="/login") Log in now &rarr;
