--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang="ko")
   head 
     link(rel="stylesheet" href="https://unpkg.com/mvp.css@1.12/mvp.css")
-    title #{pageTitle} | Wetube
+    title #{pageTitle} | #{siteName}
   body 
     header
       h1=pageTitle
@@ -14,10 +14,16 @@ html(lang="ko")
             a(href="/videos/upload") Upload Video
           li 
             a(href="/search") Search
-          li 
-            a(href="/join") Join
-          li 
-            a(href="/login") Login
+          if loggedIn   
+            li 
+              a(href="/my-profile") #{loggedInUser.name}의 profile
+            li 
+              a(href="/logout") Log out
+          else 
+            li 
+              a(href="/join") Join
+            li 
+              a(href="/login") Login
     main  
       block content
   include partials/footer
