--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -10,20 +10,20 @@ html(lang="ko")
         ul 
           li 
             a(href="/") Home
-          li 
-            a(href="/videos/upload") Upload Video
-          li 
-            a(href="/search") Search
           if loggedIn   
             li 
               a(href="/my-profile") #{loggedInUser.name}의 profile
             li 
-              a(href="/logout") Log out
+              a(href="/users/logout") Log out
           else 
             li 
               a(href="/join") Join
             li 
               a(href="/login") Login
+          li 
+            a(href="/videos/upload") Upload Video
+          li 
+            a(href="/search") Search
     main  
       block content
   include partials/footer
