--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -8,6 +8,8 @@ block content
     input(placeholder="Username" name="username", type="text", required)
     input(placeholder="Password" name="password", type="password", required)
     input(type="submit", value="Login")
+    br
+    a(href="/users/github/start") continue with github &rarr;
   hr
   div 
     span Don't Have an Account? 
