--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -12,16 +12,16 @@ html(lang="ko")
             a(href="/") Home
           if loggedIn   
             li 
-              a(href="/my-profile") #{loggedInUser.name}의 profile
+              a(href="/users/edit") Edit Profile
             li 
               a(href="/users/logout") Log out
+            li 
+              a(href="/videos/upload") Upload Video
           else 
             li 
               a(href="/join") Join
             li 
               a(href="/login") Login
-          li 
-            a(href="/videos/upload") Upload Video
           li 
             a(href="/search") Search
     main  
