--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -3,7 +3,7 @@ include mixins/video
 
 block content
   ul 
-    each item in videos 
-      +video(item)
+    each video in videos 
+      +video(video)
     else
       li Sorry nothing found
